[gd_scene load_steps=10 format=3 uid="uid://j4x30qdgg0u0"]

[ext_resource type="Texture2D" uid="uid://wnn0pbbtvmk2" path="res://dessert.png" id="1_xv0up"]
[ext_resource type="Texture2D" uid="uid://b2j101pc4607g" path="res://ww.png" id="2_uuio5"]
[ext_resource type="Texture2D" uid="uid://cqvgiik285afd" path="res://inverted_bold_minimal_outline_sketch - Kopie.png" id="3_jm1f6"]
[ext_resource type="Texture2D" uid="uid://bjty3jiuo0y42" path="res://gun.png" id="4_pq1hu"]
[ext_resource type="Texture2D" uid="uid://c5cxwihct4xh5" path="res://gun_shooting.png" id="5_j2kv5"]
[ext_resource type="Script" path="res://animation_player1.1.3.gd" id="6_b16tj"]

[sub_resource type="Animation" id="Animation_n7tox"]
resource_name = "1.1.3"
length = 7.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Button:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(5.96667, 6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(319.655, -133.502), Vector2(82.4544, -134.961)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Button2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(4.96667, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-62.0893, 304.212), Vector2(-79.503, 57.4048)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Button3:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(3.96667, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-484.079, -201.841), Vector2(-256.286, -136.196)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Button4:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(6.86667, 6.96667, 7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-255.597, 292.426), Vector2(-236.703, 150.322), Vector2(-236.703, 150.322)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.379, 0.404), Vector2(0.478641, 0.50974)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(4.018, 2.98), Vector2(3.63404, 2.69469)]
}

[sub_resource type="Animation" id="Animation_0h8vm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Button:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(82.4544, -134.961)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Button2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-79.503, 57.4048)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Button3:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-256.286, -136.196)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Button4:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-236.703, 150.322)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.478641, 0.50974)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(3.63404, 2.69469)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tj0sh"]
_data = {
"1.1.3": SubResource("Animation_n7tox"),
"RESET": SubResource("Animation_0h8vm")
}

[node name="Sprite2D" type="Sprite2D"]
position = Vector2(951, 578)
rotation = -0.0010795
scale = Vector2(3.63404, 2.69469)
texture = ExtResource("1_xv0up")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-43.4857, 9.95642)
scale = Vector2(0.478641, 0.50974)
texture = ExtResource("2_uuio5")

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(-398.759, 122.254)
rotation = -0.47822
scale = Vector2(0.316061, 0.463409)
texture = ExtResource("3_jm1f6")

[node name="Button" type="Button" parent="."]
offset_left = 82.4544
offset_top = -134.961
offset_right = 231.454
offset_bottom = -22.9605
icon = ExtResource("3_jm1f6")
expand_icon = true

[node name="Button2" type="Button" parent="."]
offset_left = -79.503
offset_top = 57.4048
offset_right = 43.497
offset_bottom = 168.405
icon = ExtResource("4_pq1hu")
expand_icon = true

[node name="Button3" type="Button" parent="."]
offset_left = -256.286
offset_top = -136.196
offset_right = -86.286
offset_bottom = -35.196
icon = ExtResource("5_j2kv5")
expand_icon = true

[node name="Button4" type="Button" parent="."]
offset_left = -236.703
offset_top = 150.322
offset_right = -199.703
offset_bottom = 181.322
text = "Exit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tj0sh")
}
script = ExtResource("6_b16tj")

[connection signal="pressed" from="Button" to="AnimationPlayer" method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="AnimationPlayer" method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="AnimationPlayer" method="_on_button_3_pressed"]
[connection signal="button_up" from="Button4" to="AnimationPlayer" method="_on_button_4_button_up"]
